force-app/main/default/objects/df_160_gtepagt_pension_ordninger_p1__c/df_160_gtepagt_pension_ordninger_p1__c.object-meta.xml
<CustomObject>
    <label>Pensionsordninger for Person 1</label>
    <nameField>
        <label>Pensionsordninger for Person 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pensionsordninger for Person 1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>